syntax = "proto3";

package pb;

option go_package = "./pb";

import "google/protobuf/timestamp.proto";

// Post message definition
message Post {
  string postId = 1;
  string title = 2;
  string description = 3;
  string createdBy = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}
